--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,37 +1,3 @@
-<h1> Here is the content </h1>
+<h1>Create new article </h1>
 
-<% if @article.errors.any? %> 
-
-  <ul>
-    <% @article.errors.full_messages.each do |msg| %>
-      
-    <li><%= msg %> </li>
-    
-    <% end %>
-  
-  </ul>
-
-<%end%>
-
-
-
-<%= form_for @article do |f| %>
-
-<p> 
-
-<%= f.label :title %>
-</br>
-<%= f.text_field :title %>
-</br>
-
-<%= f.label :description%>
-</br>
-<%= f.text_area :description %>
-
-<%= f.submit%>
-
-<% end %>
-
-
-
-</p>
+<%= render 'form'%>
