--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,19 +1,18 @@
-<h1> Voici l'article crée</h1>
+<h2 align="center"> Titre : <%= @article.title %> </h2> 
 
-<p>
-  Titre : <%= @article.title %>
+<div class="well col-xs-8 col-xs-offset-2">  
   
-</p>
 
-<p>
-  Description : <%= @article.description %>
+  <h4> Description : </h4>
   
+  <%= @article.description %>
   
-</p>
 
-<p>
-  
-  <%= link_to 'voir la liste des articles', articles_path %>
-  <%= link_to 'Editer l\'article', edit_article_path(@article) %>
-  
-</p>
+
+  <div class="article-actions">
+    
+    <%= link_to 'voir la liste des articles', articles_path, class: "btn btn-xs btn-primary"  %>
+    <%= link_to 'Editer l\'article', edit_article_path(@article), class: "btn btn-xs btn-primary" %>
+    
+  </div>
+</div>
