--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,10 @@
   </head>
 
   <body>
+    <%= render 'layouts/navigation' %>
    <%= render 'layouts/message' %>
+   <div class = "container">
     <%= yield %>
+  </div>
   </body>
 </html>
