--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,4 +1,6 @@
-
+<div class="jumbotron bgimage">
 <h1> this is the template </h1> 
 
-<%= link_to 'Click pour about' , about_path %>
+<%= link_to 'Login' , "#", class: "btn btn-primary btn-lg" %>
+
+</div>
