Test et categories

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -37,19 +37,25 @@
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
-      </ul>
+      <% if logged_in?  %>
+        <ul class="nav navbar-nav navbar-right">
+          <li> <%= link_to "log out", logout_path, method: :delete %> </li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li> <%= link_to "changer mon profile", edit_user_path(current_user)  %> </li>
+               <li> <%= link_to "voir mon profile", user_path(current_user)  %> </li>
+              <li><a href="#">Something else here</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="#">Separated link</a></li>
+            </ul>
+          </li>
+        </ul>
+      <%else%>
+        <ul class="nav navbar-nav navbar-right">
+          <li> <%= link_to "login", login_path %> </li>
+        </ul>
+      <%end%>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
