--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,27 +1,3 @@
 <h1> Here are the articles </h1>
-<table>
-  
-  
 
-<tr> 
-<th> Title </th>
-<th> Description</th>
-<th> Show </th>
-<th> Edit </th>
-<th> Détruire </th>
-<th> Date de création</th>
-<th> Crée par </th>
-</tr>
-
-<%  @articles.each do |article| %>
-<tr> 
-<td> <%= article.title %> </td>
-<td> <%= article.description %> </td>
-<td> <%= link_to 'show', article_path(article) %> </td>
-<td> <%= link_to 'edit', edit_article_path(article) %> </td>
-<td>  <%= link_to 'détruire', article_path(article), method: :delete, data: {confirm: "T'es sûr ?"} %> </td>
-<th> <%= time_ago_in_words(article.created_at) %> </th>
-<th> <%= article.user.username if article.user %> </th>
-</tr>
-<% end %>
-</table>
+<%= render "article", obj:@articles %>
