--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,17 +1,41 @@
-<% if obj.errors.any? %> 
-<div class="row"> 
-  <div class= "col-xs-10 col-sx-offset-2">
-    <div class="arlert alert-danger">
-      <%= pluralize(@article.errors.count, "error") %>
-      <ul>
-        <% @article.errors.full_messages.each do |msg| %>
-          
-        <li><%= msg %> </li>
-        
-        <% end %>
+<% if obj.errors.any? %>
+
+  <div class="row">
+  
+    <div class="col-xs-8 col-xs-offset-2">
+    
+      <div class="panel panel-danger">
       
-      </ul>
-    </div> 
-  </div> 
-</div>
-<%end%>
+        <div class="panel-heading">
+        
+            <h2 class="panel-title">
+            
+              <%= pluralize(obj.errors.count, "error") %>
+              
+              prohibited this article from being saved:
+            
+            </h2>
+            
+            <div class="panel-body">
+            
+              <ul>
+              
+                <% obj.errors.full_messages.each do |msg| %>
+                
+                  <li><%= msg %></li>
+                
+                <% end %>
+              
+              </ul>
+            
+            </div>
+          
+          </div>
+          
+        </div>
+        
+      </div>
+  
+  </div>
+
+<% end %>
