--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron bgimage">
 <h1> this is the template </h1> 
 
-<%= link_to 'Login' , "#", class: "btn btn-primary btn-lg" %>
+<%= link_to 'sign up', signup_path, class: "btn btn-primary btn-lg"  %>
 
 </div>
